--- a/pushnotification/package.json
+++ b/pushnotification/package.json
@@ -10,7 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.3",
     "react-table": "^7.5.1",
     "react-table-6": "^6.11.0"
   },
